logo alignment fix

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1,5 +1,5 @@
 .sdk-logo
-    height: 100px
+    height: 80px
     text-align: center
 .top-gap-150
     padding-top: 150px
